samples/_failures_safe/1761449178_8f3538_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe4ec32a.c: In function ‘main’:
./samples/SAFE/__tmp_fe4ec32a.c:154:9: error: expected declaration or statement at end of input
  154 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_fe4ec32a.c:154:9: error: expected declaration or statement at end of input
